client/src/css/Notes.css
:root {
    --notes-margin: 5%;
}

#notes-wrapper {
    display: flex;
    margin-top: 50px;
    width: 100%;
    flex-direction: column;
    align-items: center;
}

.saved-message {
    width: 60%;
    height: fit-content;
    display: flex;
    flex-direction: column;
    border: 1px solid var(--body-color);
    border-radius: 5px;
    margin-bottom: 50px;
}

.saved-message-text {
    border-bottom: 1px solid gray;
    display: flex;
    flex-direction: column-reverse;
    padding: 25px;
}

.saved-text {
    flex: 0 1 auto;
    margin: 0;
    text-align: left;
}

.saved-text-tools {
    flex: 1 0 auto;
    text-align: right;
    margin-bottom: 10px;
}

.saved-text-tools-button {
    background-color: transparent;
    border: none;
    font-size: 18px;
    color: var(--body-color);
}

.saved-text-tools-button:active {
    color: #2d95fcd3;
    cursor: default;
}

.saved-text-delete {
    margin-left: 20px;
    color: red;
}

.notes-input {
    display: inline-block;
    line-height: 30px;
    max-width: 90%;
    min-width: 90%;
    min-height: 25px;
    height: fit-content;
    overflow-wrap: break-word;
    box-sizing: border-box;
    margin: 3% var(--notes-margin) 3% var(--notes-margin);
    border: none;
    color: var(--subtext-color);
    font-family: "Varela Round", sans-serif;
    background-color: transparent
}

